--- a/index.html
+++ b/index.html
@@ -7,13 +7,67 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    
     <link rel="stylesheet" href="./style.css">
 
     <title>課題</title>
   </head>
   <body>
-    <header></header>
+    <header>
+        <nav class="navbar navbar-expand-xl navbar-light bg-light">
+            <a class="navbar-brand" href="./logo/png">
+                <img src="logo.png" class="img_size">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span></span><span></span><span></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">HOME</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    CONCEPT
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">ブログアーカイブ</a>
+                    <a class="dropdown-item" href="#">お知らせアーカイブ</a>
+                    <a class="dropdown-item" href="#">イベントアーカイブ</a>
+                    <a class="dropdown-item" href="#">インタビューアーカイブ</a>
+                    <a class="dropdown-item" href="#">FAQページ</a>
+                    <a class="dropdown-item" href="#">固定ページ（デフォルト）</a>
+                    <a class="dropdown-item" href="#">CONCEPT</a>
+                    <a class="dropdown-item" href="#">SERVICE</a>
+                    <a class="dropdown-item" href="#">FLOOR</a>
+                    <a class="dropdown-item" href="#">ACCESS</a>
+                  </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">SERVICE</a>
+                  </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">FLOOR</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">INTERVIEW</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">BLOG</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">ACCESS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">DOWNLOAD</a>
+                  </li>
+
+                </li>
+
+
+              </ul>
+            </div>
+          </nav>
+    </header>
     <main></main>
     <footer></footer>
     <!-- Optional JavaScript -->
@@ -23,4 +77,3 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
-
