--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-xl navbar-light bg-light">
+      <nav class="navbar navbar-expand-xl navbar-light">
         <a class="navbar-brand" href="./logo/png">
           <img src="logo.png" class="img_size" />
         </a>
