Co-authored-by: KoudaTanishi <gamerinshaft@gmail.com>

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-xl navbar-light">
-        <a class="navbar-brand" href="./logo/png">
-          <img src="logo.png" class="img_size" />
+        <a class="navbar-brand">
+          <img src="logo.png" class="img-size" />
         </a>
         <button
           class="navbar-toggler"
