--- a/index.html
+++ b/index.html
@@ -18,7 +18,72 @@
     <title>課題</title>
   </head>
   <body>
-    <header>
+    <header id="header">
+      <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+        <a class="navbar-brand">
+          <img src="logo.png" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">HOME</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                CONCENT
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">ブログアーカイブ</a>
+                <a class="dropdown-item" href="#">お知らせアーカイブ</a>
+                <a class="dropdown-item" href="#">イベントアーカイブ</a>
+                <a class="dropdown-item" href="#">インタビューアーカイブ</a>
+                <a class="dropdown-item" href="#">FAQページ</a>
+                <a class="dropdown-item" href="#">固定ページ（デフォルト）</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">SERVICE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">FLOOR</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">INTERVIEW</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">BLOG</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ACCESS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">DOWNLOAD</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <!-- <header>
       <nav class="navbar navbar-expand-xl navbar-light">
         <a class="navbar-brand">
           <img src="logo.png" class="img-size" />
@@ -58,11 +123,12 @@
                 <a class="dropdown-item" href="#">インタビューアーカイブ</a>
                 <a class="dropdown-item" href="#">FAQページ</a>
                 <a class="dropdown-item" href="#">固定ページ（デフォルト）</a>
+                </div>
                 <a class="dropdown-item" href="#">CONCEPT</a>
                 <a class="dropdown-item" href="#">SERVICE</a>
                 <a class="dropdown-item" href="#">FLOOR</a>
                 <a class="dropdown-item" href="#">ACCESS</a>
-              </div>
+              
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">SERVICE</a>
@@ -85,8 +151,10 @@
           </ul>
         </div>
       </nav>
-    </header>
-    <main></main>
+    </header> -->
+    <main>
+      <div class="hero embed-responsive embed-responsive-16by9"></div>
+    </main>
     <footer></footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
