--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-xl bg-color">
         <a class="navbar-brand">
           <img src="logo.png" />
         </a>
@@ -32,7 +32,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span></span><span></span><span></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -52,13 +52,17 @@
               >
                 CONCENT
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <div class="dropdown-menu m-0 p-0" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">ブログアーカイブ</a>
                 <a class="dropdown-item" href="#">お知らせアーカイブ</a>
                 <a class="dropdown-item" href="#">イベントアーカイブ</a>
                 <a class="dropdown-item" href="#">インタビューアーカイブ</a>
                 <a class="dropdown-item" href="#">FAQページ</a>
                 <a class="dropdown-item" href="#">固定ページ（デフォルト）</a>
+                <a class="dropdown-item" href="#">CONCEPT</a>
+                <a class="dropdown-item" href="#">SERVICE</a>
+                <a class="dropdown-item" href="#">FLOOR</a>
+                <a class="dropdown-item" href="#">ACCESS</a>
               </div>
             </li>
             <li class="nav-item">
@@ -83,75 +87,6 @@
         </div>
       </nav>
     </header>
-    <!-- <header>
-      <nav class="navbar navbar-expand-xl navbar-light">
-        <a class="navbar-brand">
-          <img src="logo.png" class="img-size" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span></span><span></span><span></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">HOME</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                CONCEPT
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">ブログアーカイブ</a>
-                <a class="dropdown-item" href="#">お知らせアーカイブ</a>
-                <a class="dropdown-item" href="#">イベントアーカイブ</a>
-                <a class="dropdown-item" href="#">インタビューアーカイブ</a>
-                <a class="dropdown-item" href="#">FAQページ</a>
-                <a class="dropdown-item" href="#">固定ページ（デフォルト）</a>
-                </div>
-                <a class="dropdown-item" href="#">CONCEPT</a>
-                <a class="dropdown-item" href="#">SERVICE</a>
-                <a class="dropdown-item" href="#">FLOOR</a>
-                <a class="dropdown-item" href="#">ACCESS</a>
-              
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">SERVICE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">FLOOR</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">INTERVIEW</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">BLOG</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ACCESS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">DOWNLOAD</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header> -->
     <main>
       <div class="hero embed-responsive embed-responsive-16by9"></div>
     </main>
