無駄な部分の削除、整理

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="navbar navbar-expand-xl bg-color">
+      <nav class="navbar navbar-expand-xl bg-color p-0">
         <a class="navbar-brand">
           <img src="logo.png" />
         </a>
