レビューでの指摘箇所修正

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <title>課題</title>
   </head>
   <body>
-    <header id="header">
-      <nav class="navbar navbar-expand-xl bg-color p-0">
+    <header>
+      <nav class="navbar navbar-expand-xl p-0">
         <a class="navbar-brand">
-          <img src="logo.png" />
+          <img src="./logo.png" />
         </a>
         <button
           class="navbar-toggler"
@@ -32,7 +32,9 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span></span><span></span><span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
