sectionタグとidの追加

--- a/index.html
+++ b/index.html
@@ -90,19 +90,21 @@
       </nav>
     </header>
     <main>
-      <div class="hero copy-container embed-responsive embed-responsive-16by9">
-        <div class="copy">
-          <p>そうだ。<br />カフェに行こう。</p>
+      <section id="top-message">
+        <div class="hero copy-container embed-responsive embed-responsive-16by9">
+          <div class="copy">
+            <p>そうだ。<br />カフェに行こう。</p>
+          </div>
         </div>
-      </div>
-      <div class="lead-container">
-        <div class="lead-inner">
-          <h1>カフェで読書＆コワーキング。快適のフロアスペース空間。</h1>
-          <p>
-            カフェエリアでコーヒーを注文し、ブックエリアでお好みの本を選び、コワーキングスペースでコーヒーと共に読書を楽しむ。<br />学校・仕事帰りに、平日の日中に、休日にゆっくり...さまざまなライフスタイルに合わせてご利用いただける多彩なプランをご用意しております。
-          </p>
+        <div class="lead-container">
+          <div class="lead-inner">
+            <h1>カフェで読書＆コワーキング。快適のフロアスペース空間。</h1>
+            <p>
+              カフェエリアでコーヒーを注文し、ブックエリアでお好みの本を選び、コワーキングスペースでコーヒーと共に読書を楽しむ。<br />学校・仕事帰りに、平日の日中に、休日にゆっくり...さまざまなライフスタイルに合わせてご利用いただける多彩なプランをご用意しております。
+            </p>
+          </div>
         </div>
-      </div>
+      </section>
     </main>
     <footer></footer>
     <!-- Optional JavaScript -->
