--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <section id="top-message">
         <div class="hero copy-container embed-responsive embed-responsive-16by9">
           <div class="copy">
-            <p>そうだ。<br />カフェに行こう。</p>
+            <h1>そうだ。<br />カフェに行こう。</h1>
           </div>
         </div>
         <div class="lead-container">
