--- a/index.html
+++ b/index.html
@@ -96,13 +96,11 @@
             <h1>そうだ。<br />カフェに行こう。</h1>
           </div>
         </div>
-        <div class="lead-container">
-          <div class="lead-inner">
-            <h1>カフェで読書＆コワーキング。快適のフロアスペース空間。</h1>
-            <p>
-              カフェエリアでコーヒーを注文し、ブックエリアでお好みの本を選び、コワーキングスペースでコーヒーと共に読書を楽しむ。<br />学校・仕事帰りに、平日の日中に、休日にゆっくり...さまざまなライフスタイルに合わせてご利用いただける多彩なプランをご用意しております。
-            </p>
-          </div>
+        <div class="lead">
+          <h1>カフェで読書＆コワーキング。快適のフロアスペース空間。</h1>
+          <p>
+            カフェエリアでコーヒーを注文し、ブックエリアでお好みの本を選び、コワーキングスペースでコーヒーと共に読書を楽しむ。<br />学校・仕事帰りに、平日の日中に、休日にゆっくり...さまざまなライフスタイルに合わせてご利用いただける多彩なプランをご用意しております。
+          </p>
         </div>
       </section>
     </main>
