embedの適用をやめ、他の方法で背景画像と文字のレスポンシブに対応

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </header>
     <main>
       <section id="top-message">
-        <div class="hero copy-container embed-responsive embed-responsive-16by9">
+        <div class="hero copy-container">
           <div class="copy">
             <h1>そうだ。<br />カフェに行こう。</h1>
           </div>
