containerクラス追加

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
           <h1>そうだ。<br />カフェに行こう。</h1>
         </div>
       </div>
-      <div class="lead  px-4 py-5">
-        <h1 class="mb-3">カフェで読書＆コワーキング。快適のフロアスペース空間。</h1>
-        <p>
+      <div class="lead container">
+        <h1 class="pt-4 pb-3">カフェで読書＆コワーキング。快適のフロアスペース空間。</h1>
+        <p class="pb-3">
           カフェエリアでコーヒーを注文し、ブックエリアでお好みの本を選び、コワーキングスペースでコーヒーと共に読書を楽しむ。<br />学校・仕事帰りに、平日の日中に、休日にゆっくり...さまざまなライフスタイルに合わせてご利用いただける多彩なプランをご用意しております。
         </p>
       </div>
