--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@
         </p>
       </div>
     </section>
+    <section id="top-panels" class="mx-4">
+      <div class="panels mx-auto w-100 p-0 no-gutters row col-6 col-md-3">
+        <div class="col"><img src="./top_4images_1.jpg"></div>
+        <div class="col"><img src="./top_4images_2.jpg"></div>
+        <div class="col"><img src="./top_4images_3.jpg"></div>
+        <div class="col"><img src="./top_4images_4.jpg"></div>
+      </div>
+      <div class="message container">
+        <h1 class="pt-4 pb-3">人と人、人と本が繋がるまったく新しい快適時間。</h1>
+        <p class="pb-3">
+          月額プラン以外にビジター料金でのご利用も可能です。通いやすい時間や曜日に合わせてプランをお選びください。<br />ご登録プランは後の変更も可能ですので、資格試験等の目標がある場合など環境の変化に合わせて柔軟に対応しております。WiFiも電源も標準設備しており、<br />時間を気にせず仕事や勉強に取り組めます。カフェでの長居は気が引けるという方にも心置きなくご利用いただけます。
+        </p>
+      </div>
+    </section>
   </main>
   <footer></footer>
   <!-- Optional JavaScript -->
